# basjacobs.com

./: .Rhistory  .Rprofile  .gitignore  README.md  _quarto.yml  about.qmd  config.toml  index.qmd  netlify.toml  pyproject.toml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/listing/: listing-cache.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 04139c93  13c20e70  15191882  28763021  29528ce9  31721a50  5c4095ec  INDEX  d1594a26  e0dadd17  f345d8b0
_site/: about.html  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
content/about/: _index.md
content/post/: 2018-06-28-pen-plotter.Rmd  2018-06-28-pen-plotter.html  2018-07-15-generating-the-logo-for-this-site.Rmd  2018-07-15-generating-the-logo-for-this-site.html  2018-09-20-image-approximation-with-keras-in-r.Rmd  2018-09-20-image-approximation-with-keras-in-r.html  2018-10-28-showing-images-on-hover-in-plotly-with-r.Rmd  2018-10-28-showing-images-on-hover-in-plotly-with-r.html  2019-04-21-trees-and-tents.Rmd  2019-04-21-trees-and-tents.html  2020-10-02-riddler-can-you-eat-all-the-chocolates.Rmd  2020-10-02-riddler-can-you-eat-all-the-chocolates.html  2020-11-18-image-triangulation-with-julia.md  2021-01-04-eleksdraw-pen-plotter-with-r.Rmd  2021-01-04-eleksdraw-pen-plotter-with-r.html  model1.hdf5
post/2018-06-28-pen-plotter/: index.qmd
post/2018-09-20-image-approximation-with-keras-in-r/: index.qmd
post/2018-10-28-showing-images-on-hover-in-plotly-with-r/: index.qmd
post/2025-08-15-neurogram/: index.qmd
public/: 404.html  index.html  index.xml  sitemap.xml
(+170 files in other folders)
